// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupForm bails if input is empty 1`] = `
<form
  action="https://somewheretowear.us19.list-manage.com/subscribe/post?u=641ee46704f17c07dc0e3c08e&id=4e403bb31e"
  class="signup-form haas signup-form--slide"
  method="post"
  novalidate="novalidate"
  target="_blank"
>
  <div
    class="signup-form__input-wrap"
  >
    <label
      class="signup-form__label"
      for="email"
    >
      <span
        class="visually-hidden"
      >
        email 
      </span>
      sign up
    </label>
     
    <div
      class="signup-form__box"
    >
      <input
        autocomplete="off"
        autofocus="autofocus"
        class="signup-form__input"
        id="email"
        name="EMAIL"
        placeholder="you@example.com"
        type="email"
      />
       
      <div
        aria-hidden="true"
        class="visually-hidden"
      >
        <input
          name="b_641ee46704f17c07dc0e3c08e_4e403bb31e"
          tabindex="-1"
          type="text"
        />
      </div>
       
      <button
        class="signup-form__button"
      >
        <span>
          go
        </span>
      </button>
    </div>
  </div>
   
  <p
    class="signup-form__message"
  >
    That doesn't look like a valid email address. Try again.
  </p>
</form>
`;

exports[`SignupForm renders 1`] = `
<form
  action="https://somewheretowear.us19.list-manage.com/subscribe/post?u=641ee46704f17c07dc0e3c08e&id=4e403bb31e"
  class="signup-form haas signup-form--slide"
  method="post"
  novalidate="novalidate"
  target="_blank"
>
  <div
    class="signup-form__input-wrap"
  >
    <label
      class="signup-form__label"
      for="email"
    >
      <span
        class="visually-hidden"
      >
        email 
      </span>
      sign up
    </label>
     
    <div
      class="signup-form__box"
    >
      <input
        autocomplete="off"
        autofocus="autofocus"
        class="signup-form__input"
        id="email"
        name="EMAIL"
        placeholder="you@example.com"
        type="email"
      />
       
      <div
        aria-hidden="true"
        class="visually-hidden"
      >
        <input
          name="b_641ee46704f17c07dc0e3c08e_4e403bb31e"
          tabindex="-1"
          type="text"
        />
      </div>
       
      <button
        class="signup-form__button"
      >
        <span>
          go
        </span>
      </button>
    </div>
  </div>
   
  <!---->
</form>
`;
